--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -17,7 +17,7 @@
     "alphabetical": "Alfabetycznie",
     "date-added": "Data dodania",
 
-    "explore-support-message": "Wspieraj Nertivię przez dotacje dowolnej ilości pieniędzy. Otrzymasz odznakę wspierdającego oraz więcej funkcji w przyszłości.",
+    "explore-support-message": "Wspieraj Nertivię przez dotacje dowolnej ilości pieniędzy. Otrzymasz odznakę wspierającego oraz więcej funkcji w przyszłości.",
     "support-message-settings": "Wspieraj Nertivię. Otrzymasz odznakę.",
     "donate": "Wspieraj",
 
