--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -11,7 +11,7 @@
     "sort-by": "Sortuj",
 
     "all": "Wszystkie",
-    "verified": "Zweryfykowane",
+    "verified": "Zweryfikowane",
     "most-users": "Najwięcej Użytkowników",
     "least-users": "Najmniej Użytkowników",
     "alphabetical": "Alfabetycznie",
