Added Languages setting (beta) youtube embed link changed to no cookie version.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -22,6 +22,7 @@
     "donate": "Donate",
 
     "join": "Join",
-    "join-card-message": "Join the official Nertivia server"
+    "join-card-message": "Join the official Nertivia server",
+    "coming-soon!": "Coming soon!"
 
 }
