Update and rename JPN.json to jp.json

--- a/src/lang/jp.json
+++ b/src/lang/jp.json
@@ -22,7 +22,7 @@
     "donate": "寄付",
 
     "join": "参加する",
-    "join-card-message": "参加カードメッセージ"
+    "join-card-message": "参加カードメッセージ",
     
     "Translated-By": "NekoNoiir, RolkozTM and My Japanese cousin"
 }
