--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -19,7 +19,7 @@
 
     "explore-support-message": "Wspieraj Nertivię przez dotacje dowolnej ilości pieniędzy. Otrzymasz odznakę wspierającego oraz więcej funkcji w przyszłości.",
     "support-message-settings": "Wspieraj Nertivię. Otrzymasz odznakę.",
-    "donate": "Wspieraj",
+    "donate": "Wesprzyj",
 
     "join": "Dołącz",
     "join-card-message": "Dołącz do oficjalnego serwera Nertivii",
