Revert "Improved Polish translation"

--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -12,13 +12,13 @@
 
     "all": "Wszystkie",
     "verified": "Zweryfikowane",
-    "most-users": "Najwięcej Osób",
-    "least-users": "Najmniej Osób",
+    "most-users": "Najwięcej Użytkowników",
+    "least-users": "Najmniej Użytkowników",
     "alphabetical": "Alfabetycznie",
     "date-added": "Data dodania",
 
-    "explore-support-message": "Wesprzyj Nertivię przez dotacje dowolnej ilości pieniędzy. Otrzymasz odznakę wspierającego oraz więcej funkcji w przyszłości.",
-    "support-message-settings": "Wesprzyj Nertivię. Otrzymasz odznakę.",
+    "explore-support-message": "Wspieraj Nertivię przez dotacje dowolnej ilości pieniędzy. Otrzymasz odznakę wspierającego oraz więcej funkcji w przyszłości.",
+    "support-message-settings": "Wspieraj Nertivię. Otrzymasz odznakę.",
     "donate": "Wesprzyj",
 
     "join": "Dołącz",
