--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -25,7 +25,7 @@
     "join-card-message": "Dołącz do oficjalnego serwera Nertivii",
     "coming-soon!": "Wkrótce!",
 
-    "joined": "Dołączony",
+    "joined": "Jest już na serwerze",
     "apply": "Aplikuj",
     "unapply": "Odaplikuj",
     "copy-link": "Skopiuj link",
