--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -17,8 +17,8 @@
     "alphabetical": "Alfabetycznie",
     "date-added": "Data dodania",
 
-    "explore-support-message": "Wspieraj Nertivię przez dotacje dowolnej ilości pieniędzy. Otrzymasz odznakę wspierającego oraz więcej funkcji w przyszłości.",
-    "support-message-settings": "Wspieraj Nertivię. Otrzymasz za to odznakę.",
+    "explore-support-message": "Wesprzyj Nertivię przez dotacje dowolnej ilości pieniędzy. Otrzymasz odznakę wspierającego oraz więcej funkcji w przyszłości.",
+    "support-message-settings": "Wesprzyj Nertivię. Otrzymasz za to odznakę.",
     "donate": "Wesprzyj",
 
     "join": "Dołącz",
