--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -48,7 +48,7 @@
     "add-friends-message": "Dodaj znajomych",
     "offline-message": "Wszyscy twoi znajomi są niedostępni.",
     "saved-notes": "Zachowane notatki",
-    "select-person-message": "Wybierz osobę do, której chcesz wysłać wiadomość",
+    "select-person-message": "Wybierz osobę, do której chcesz wysłać wiadomość",
     "message": "Wiadomość",
 
     "add-server": "Dodaj serwer",
