--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -25,7 +25,7 @@
     "join-card-message": "Dołącz do oficjalnego serwera Nertivii",
     "coming-soon!": "Wkrótce!",
 
-    "joined": "Ta osoba już jest na tym serwerze.",
+    "joined": "Dołączono",
     "apply": "Aplikuj",
     "unapply": "Odaplikuj",
     "copy-link": "Skopiuj link",
