--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -60,6 +60,7 @@
     "new-messages": "Nowe wiadomości",
 
     "today-at": "Dzisiaj o {0}",
-    "yesterday-at": "Wczoraj o {0}"
+    "yesterday-at": "Wczoraj o {0}",
+    "send-a-message": "Send a message"
 
 }
