--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -61,6 +61,6 @@
 
     "today-at": "Dzisiaj o {0}",
     "yesterday-at": "Wczoraj o {0}",
-    "send-a-message": "Send a message"
+    "send-a-message": "Wyślij Wiadomość"
 
 }
