--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -12,8 +12,8 @@
 
     "all": "Wszystkie",
     "verified": "Zweryfikowane",
-    "most-users": "Najwięcej Osób",
-    "least-users": "Najmniej Osób",
+    "most-users": "Najwięcej Użytkowników",
+    "least-users": "Najmniej Użytkowników",
     "alphabetical": "Alfabetycznie",
     "date-added": "Data dodania",
 
@@ -25,7 +25,7 @@
     "join-card-message": "Dołącz do oficjalnego serwera Nertivii",
     "coming-soon!": "Wkrótce!",
 
-    "joined": "Jesteś tam",
+    "joined": "Dołączono",
     "apply": "Aplikuj",
     "unapply": "Odaplikuj",
     "copy-link": "Skopiuj link",
