--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -23,6 +23,43 @@
 
     "join": "Присоедениться",
     "join-card-message": "Присоеденитесь в оффициальный сервер Nertivia",
-    "coming-soon!": "Скоро будет!"
+    "coming-soon!": "Скоро будет!",
 
+    "joined": "Присоединён",
+    "apply": "Применить",
+    "unapply": "Отменить",
+    "copy-link": "Скопировать Ссылку",
+
+    "clone": "Клонировать",
+    "cloning": "Клонируем...",
+    "cloned": "Склонировано",
+    "theme-safe-message": "Темы ниже безопасны и проверены самостоятельно.",
+
+    "friends": "Друзья",
+    "pending": "Ожидание",
+    "recents": "Недавние",
+
+    "online": "В сети",
+    "away": "Не активен",
+    "busy": "Занят",
+    "looking-to-play": "Хочу играть",
+    "offline": "Не в сети",
+
+    "add-friends-message": "Добавьте больше друзей.",
+    "offline-message": "Все ваши друзья не в сети.",
+    "saved-notes": "Сохранённые Заметки",
+    "select-person-message": "Нажмите на человека что-бы написать!",
+    "message": "Сообщение",
+
+    "add-server": "Добавить Сервер",
+    "add-friend": "Добавить Друга",
+    "add-friend-message": "Добавте друзей используя ихнее имя и тэг.",
+    "adding": "Добавление...",
+    "create": "Создать",
+
+    "new-messages": "Новые сообщение",
+
+    "today-at": "Сегодня в {0}",
+    "yesterday-at": "Вчера в {0}",
+    "send-a-message": "Написать сообщение"
 }
