fixed typo in RU found by RUvlad1

--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -57,7 +57,7 @@
     "adding": "Добавление...",
     "create": "Создать",
 
-    "new-messages": "Новые сообщение",
+    "new-messages": "Новые сообщения",
 
     "today-at": "Сегодня в {0}",
     "yesterday-at": "Вчера в {0}",
