--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -42,7 +42,7 @@
     "online": "Aktywny",
     "away": "Zaraz wracam",
     "busy": "Zajęty",
-    "looking-to-play": "Szkuam graczy",
+    "looking-to-play": "Szkuam do gry",
     "offline": "Niedostępny",
 
     "add-friends-message": "Dodaj znajomych",
