fixed issues with json

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -18,7 +18,7 @@
     "date-added": "zuletzt erstellt",
 
     "explore-support-message": "Unterstütze Nertivia, indem du >1GBP spendest. Dies verschaffe dir ein Unterstützer-Badge, sowie weitere anstehende Kleinigkeiten",
-    "support-message-settings": "Unterstütze Nertivia. Du erhaltest ein globales Unterstützer-Badge!,
+    "support-message-settings": "Unterstütze Nertivia. Du erhaltest ein globales Unterstützer-Badge!",
     "donate": "Spenden",
 
     "join": "Beitreten",
