fixed more mistakes

--- a/src/lang/bg.json
+++ b/src/lang/bg.json
@@ -61,7 +61,7 @@
 
     "today-at": "Неска в {0}",
     "yesterday-at": "Вчера в {0}",
-    "send-a-message": "Изпрати ново съобщение"
+    "send-a-message": "Изпрати ново съобщение",
 
     "Translated-By": "Veii"
 }
