added translated by

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -61,5 +61,7 @@
 
     "today-at": "Heute um {0}",
     "yesterday-at": "Gestern um {0}",
-    "send-a-message": "Verfasse eine Nachricht"
+    "send-a-message": "Verfasse eine Nachricht",
+
+    "Translated-By": "Translated by Hanako, ReWritten by Veii"
 }
