Enhance Thai Translations

--- a/src/lang/th.json
+++ b/src/lang/th.json
@@ -1,65 +1,65 @@
 {
     "explore": "สำรวจ",
-    "explore-desc": "ค้นหาที่ๆใหม่, อิโมจิและอีกมากมาย!",
-    "servers": "กิลด์",
-    "join-server": "เข้าร่วมกิลด์",
+    "explore-desc": "ค้นห่าเซิร์ฟเวอร์และธีมใหม่ๆ ที่นี่",
+    "servers": "เซิร์ฟเวอร์",
+    "join-server": "เข้าเซิร์ฟเวอร์",
     "themes": "ธีม",
-    "emoji-packs": "แพ็คอิโมจิ",
-    "message-styles": "รูปแบบข้อความ",
+    "emoji-packs": "แพ็กอิโมจิ",
+    "message-styles": "ตกแต่งข้อความ",
     "created-by": "สร้างโดย",
     "filter": "กรอง..",
-    "sort-by": "จัดเรียงตาม..",
+    "sort-by": "เรียงตาม..",
 
-    "all": "ทุกอย่าง",
-    "verified": "ได้รับการยืนยัน",
-    "most-users": "ผู้ใช้ (ส่วนใหญ่)",
-    "least-users": "ผู้ใช้(ส่วนน้อย)",
-    "alphabetical": "เรียงตามตัวอักษร",
-    "date-added": "ตามวันที่",
+    "all": "ทั้งหมด",
+    "verified": "ยืนยันแล้ว",
+    "most-users": "จำนวนคน (จากมากไปน้อย)",
+    "least-users": "จำนวนคน (จากน้อยไปมาก)",
+    "alphabetical": "ลำดับตัวอักษร",
+    "date-added": "วันที่สร้าง",
 
-    "explore-support-message": "สนับสนุน Nertivia ด้วยการบริจาคเงินจำนวนเท่าใดก็ได้ คุณจะได้รับตราผู้สนับสนุนและคุณสมบัติเพิ่มเติมในอนาคต!",
-    "support-message-settings": "สนับสนุน Nertivia!",
-    "donate": "บริจาค!",
+    "explore-support-message": "สนับสนุน Nertivia ด้วยการโดเนทเงินเท่าไหร่ก็ได้ ท่านจะได้รับป้ายผู้สนับสนุน และสิทธิพิเศษอื่นๆ ในอนาคต",
+    "support-message-settings": "สนับสนุน Nertivia สิ คุณจะได้ป้ายตกแต่งด้วยนะ",
+    "donate": "โดเนท",
 
-    "join": "เข้าร่วม!",
-    "join-card-message": "เข้าร่วมกิลด์ Nertivia (เป็นทางการ)",
-    "coming-soon!": "เร็วๆ นี้!",
+    "join": "เข้ากลุ่ม",
+    "join-card-message": "เข้าร่วมเซิร์ฟเวอร์ Nertivia ทางการ",
+    "coming-soon!": "พบกันเร็วๆ นี้",
 
-    "joined": "เข้าร่วมแล้ว",
-    "apply": "นำมาใช้",
-    "unapply": "ไม่นำมาใช้",
+    "joined": "เข้ากลุ่มแล้ว"
+    "apply": "เลือกธีม", // apply/unapply is for themes apply only, for general apply please delete the word ธีม 
+    "unapply": "ปิดใช้ธีม",
     "copy-link": "คัดลอกลิงค์",
 
     "clone": "โคลน",
-    "cloning": "กำลังโคลน ..",
-    "cloned": "โคลนสำเร็จ",
-    "theme-safe-message": "ธีมด้านล่างมีความปลอดภัย และทุกธีมได้รับการตรวจสอบอย่างเป็นทางการ",
+    "cloning": "กำลังโคลน...",
+    "cloned": "โคลนแล้ว"
+    "theme-safe-message": "ทางเราได้ตรวจสอบความปลอดภัยของธีมทั้งหมดแล้ว",
 
     "friends": "เพื่อน",
-    "pending": "รอการยืนยัน",
-    "recents": "เมื่อเร็ว ๆ นี้",
+    "pending": "กำลังรอ",
+    "recents": "ล่าสุด",
 
     "online": "ออนไลน์",
     "away": "ไม่อยู่",
     "busy": "ไม่ว่าง",
-    "looking-to-play": "หาเพื่อนเล่นด้วยกัน",
+    "looking-to-play": "หาคนเล่น",
     "offline": "ออฟไลน์",
 
     "add-friends-message": "เพิ่มเพื่อน",
-    "offline-message": "เพื่อนทุกคนของคุณกำลังออฟไลน์",
-    "saved-notes": "สมุดบันทึก",
-    "select-person-message": "เลือกบุคคลที่จะส่งข้อความ!",
+    "offline-message": "เพื่อนคุณทุกคนออฟไลน์",
+    "saved-notes": "บันทึกข้อความ",
+    "select-person-message": "โปรดเลือกคนที่จะส่งข้อความ",
     "message": "ข้อความ",
 
-    "add-server": "เพิ่มกิลด์",
+    "add-server": "สร้างเซิร์ฟเวอร์",
     "add-friend": "เพิ่มเพื่อน",
     "add-friend-message": "เพิ่มเพื่อนด้วยชื่อและแท็ก",
-    "adding": "กำลังเพิ่ม..",
+    "adding": "กำลังสร้าง..",
     "create": "สร้าง",
 
-    "new-messages": "ข้อความใหม่",
+    "new-messages": "มีข้อความใหม่",
 
-    "today-at": "วันนี้ตอน {0}",
-    "yesterday-at": "เมื่อวานตอน {0}",
+    "today-at": "วันนี้ เวลา {0}",
+    "yesterday-at": "เมื่อวาน เวลา {0}",
     "send-a-message": "ส่งข้อความ"
 }
