--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -1,39 +1,39 @@
 {
-    "explore": "Исследовать",
-    "explore-desc": "Находите новые сервера, Эмодзи и многое другое!",
-    "servers": "Сервера",
-    "join-server": "Присоедениться в Сервер",
+    "explore": "Исследование",
+    "explore-desc": "Находите новые серверы, эмодзи и многое другое!",
+    "servers": "Серверы",
+    "join-server": "Присоединиться",
     "themes": "Темы",
-    "emoji-packs": "Сборки Эмодзи",
-    "message-styles": "Стили Сообщений",
-    "created-by": "Создано",
+    "emoji-packs": "Паки эмодзи",
+    "message-styles": "Стили сообщений",
+    "created-by": "Создатель",
     "filter": "Фильтр",
-    "sort-by": "Сортировать по",
+    "sort-by": "Сортировка",
 
-    "all": "Всему",
-    "verified": "Подтвержденному",
-    "most-users": "Большинству пользователей",
-    "least-users": "Наименьшему количеству пользователей",
-    "alphabetical": "Алфавиту",
-    "date-added": "Дате создания",
+    "all": "Все",
+    "verified": "Подтвержденные",
+    "most-users": "Максимальное кол-во пользователей",
+    "least-users": "Минимальное кол-во пользователей",
+    "alphabetical": "По алфавиту",
+    "date-added": "Дата создания",
 
-    "explore-support-message": "Поддержите Nertivia пожертвовав любое количество денег. Вы получите значок поддержки и больше фукций в будущем.",
-    "support-message-settings": "Поддержите Nertivia. Вы получите значок.",
-    "donate": "Пожертвовать",
+    "explore-support-message": "Поддержите Nertivia любой суммой. Вы получите значок саппортера, а так же множество фукций в будущем.",
+    "support-message-settings": "Поддержите Nertivia и получите значок!",
+    "donate": "Поддержать",
 
-    "join": "Присоедениться",
-    "join-card-message": "Присоеденитесь в оффициальный сервер Nertivia",
-    "coming-soon!": "Скоро будет!",
+    "join": "Присоединиться",
+    "join-card-message": "Присоединяйтесь к официальному серверу Nertivia!",
+    "coming-soon!": "Скоро!",
 
-    "joined": "Присоединён",
+    "joined": "Вы участник",
     "apply": "Применить",
     "unapply": "Отменить",
-    "copy-link": "Скопировать Ссылку",
+    "copy-link": "Копировать cсылку",
 
     "clone": "Клонировать",
     "cloning": "Клонируем...",
-    "cloned": "Склонировано",
-    "theme-safe-message": "Темы ниже безопасны и проверены самостоятельно.",
+    "cloned": "Склонирована",
+    "theme-safe-message": "Расположенные ниже темы были проверены администрацией и являются безопасными.",
 
     "friends": "Друзья",
     "pending": "Ожидание",
@@ -45,15 +45,15 @@
     "looking-to-play": "Хочу играть",
     "offline": "Не в сети",
 
-    "add-friends-message": "Добавьте больше друзей.",
-    "offline-message": "Все ваши друзья не в сети.",
-    "saved-notes": "Сохранённые Заметки",
-    "select-person-message": "Нажмите на человека что-бы написать!",
+    "add-friends-message": "Найдите несколько друзей",
+    "offline-message": "Ваши друзья не в сети",
+    "saved-notes": "Сохранённые заметки",
+    "select-person-message": "Выберите пользователя чтобы открыть диалог",
     "message": "Сообщение",
 
-    "add-server": "Добавить Сервер",
-    "add-friend": "Добавить Друга",
-    "add-friend-message": "Добавте друзей используя ихнее имя и тэг.",
+    "add-server": "Создать сервер",
+    "add-friend": "Добавить в друзья",
+    "add-friend-message": "Найти друга, используя имя и тэг",
     "adding": "Добавление...",
     "create": "Создать",
 
