--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -63,5 +63,5 @@
     "yesterday-at": "Gestern um {0}",
     "send-a-message": "Verfasse eine Nachricht",
 
-    "Translated-By": "Translated by Hanako, ReWritten by Veii"
+    "Translated-By": "Translated by Hanako, ReWritten by Veii, Edited by LostNuke"
 }
