Updated German language file
fixed typo
changed use of English "Badge" in German translation

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -17,8 +17,8 @@
     "alphabetical": "Alphabetisch",
     "date-added": "Erstelldatum",
 
-    "explore-support-message": "Unterstütze Nertivia, indem du >1GBP spendest. Dies verschafft dir einen Unterstützer-Badge, sowie weitere anstehende Kleinigkeiten",
-    "support-message-settings": "Unterstütze Nertivia. Du erhaltest ein globales Unterstützer-Badge!",
+    "explore-support-message": "Unterstütze Nertivia, indem du >1GBP spendest. Dies verschafft dir einen Unterstützer-Abzeichen, sowie weitere anstehende Kleinigkeiten",
+    "support-message-settings": "Unterstütze Nertivia. Du erhältst ein globales Unterstützer-Abzeichen!",
     "donate": "Spenden",
 
     "join": "Beitreten",
