--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,65 +1,65 @@
 {
-    "explore": "Explore",
-    "explore-desc": "Find new servers, Emojis and more!",
-    "servers": "Servers",
-    "join-server": "Join Server",
+    "explore": "Tyrinėti",
+    "explore-desc": "Rasti naujų serverių, emociukų ir daugiau!",
+    "servers": "Serveriai",
+    "join-server": "Prisijungti prie serverio",
     "themes": "Themes",
-    "emoji-packs": "Emoji Packs",
-    "message-styles": "Message Styles",
-    "created-by": "Created By",
-    "filter": "Filter",
-    "sort-by": "Sort By",
+    "emoji-packs": "Emociukų pąkuotės",
+    "message-styles": "Žinučių stilius",
+    "created-by": "Sukurta",
+    "filter": "Filtruoti",
+    "sort-by": "Rūšiuoti pagal",
 
-    "all": "All",
-    "verified": "Verified",
-    "most-users": "Most Users",
-    "least-users": "Least Users",
-    "alphabetical": "Alphabetical",
-    "date-added": "Date Added",
+    "all": "Visi",
+    "verified": "Patvirtinti",
+    "most-users": "Didžioji dalis naudotojų",
+    "least-users": "Mažiausioji dalis naudotojų",
+    "alphabetical": "Pagal abėcėlę",
+    "date-added": "Data pridėta",
 
-    "explore-support-message": "Support Nertivia by donating any amount of money. You will get a supporter badge and more features in the future.",
-    "support-message-settings": "Support Nertivia. You will get a badge.",
-    "donate": "Donate",
+    "explore-support-message": "Remkite Nertivia paaukodami bet kokią pinigų sumą, jūs gausite remėjų ženkliuką ir daugiau funkcijų ateityje.",
+    "support-message-settings": "Remkite Nertivia. Gausite ženkliuką.",
+    "donate": "Remti",
 
-    "join": "Join",
-    "join-card-message": "Join the official Nertivia server",
-    "coming-soon!": "Coming soon!",
+    "join": "Prisijungti",
+    "join-card-message": "Prisijungite prie officialaus Nertivia serverio.",
+    "coming-soon!": "Atsiras ateityje!",
 
-    "joined": "Joined",
-    "apply": "Apply",
-    "unapply": "Unapply",
-    "copy-link": "Copy Link",
+    "joined": "Prisijungta",
+    "apply": "Kreiptis",
+    "unapply": "Atsiimti prašymą",
+    "copy-link": "Kopijuoti nuorodą",
 
-    "clone": "Clone",
-    "cloning": "Cloning...",
-    "cloned": "Cloned",
-    "theme-safe-message": "Themes below are safe and manually reviewed.",
+    "clone": "Klonuoti",
+    "cloning": "Klonuojama...",
+    "cloned": "Nuklonuota",
+    "theme-safe-message": "Themes žemiau yra saugios ir patvirtintos rankiniu būdu.",
 
-    "friends": "Friends",
-    "pending": "Pending",
-    "recents": "Recents",
+    "friends": "Draugai",
+    "pending": "Laukiama",
+    "recents": "Naujausi",
 
-    "online": "Online",
-    "away": "Away",
-    "busy": "Busy",
-    "looking-to-play": "Looking to play",
-    "offline": "Offline",
+    "online": "Prisijungę",
+    "away": "Išėję",
+    "busy": "Užsiemę",
+    "looking-to-play": "Ieškantįs žmonių su kuriais galėtų žaisti",
+    "offline": "Neprisijungę",
 
-    "add-friends-message": "Add some friends.",
-    "offline-message": "All of your friends are offline.",
-    "saved-notes": "Saved Notes",
-    "select-person-message": "Select a person to message!",
-    "message": "Message",
+    "add-friends-message": "Pridėti draugų",
+    "offline-message": "Visi jūsų draugai nėra prisijungę",
+    "saved-notes": "Išsaugotos pastabos",
+    "select-person-message": "Pasirinktite žmogų kuriam parašyti!",
+    "message": "Parašyti",
 
-    "add-server": "Add Server",
-    "add-friend": "Add Friend",
-    "add-friend-message": "Add friends by using their username and tag.",
-    "adding": "Adding...",
-    "create": "Create",
+    "add-server": "Pridėti serverį",
+    "add-friend": "Pridėti draugą",
+    "add-friend-message": "Pridėkite draugų naudodami jų pavadinima ir tegą.",
+    "adding": "Pridedama",
+    "create": "Sukurti",
 
-    "new-messages": "New messages",
+    "new-messages": "Naujos žinutės",
 
-    "today-at": "Today at {0}",
-    "yesterday-at": "Yesterday at {0}",
-    "send-a-message": "Send a message"
+    "today-at": "Šiandien {0} valandą",
+    "yesterday-at": "Vakar {0} valandą",
+    "send-a-message": "Išsiųsti žinutę"
 }
